...
        _getRecommendation(widget.cups, widget.maker);

    return Scaffold(
      backgroundColor: Color(0xFFF3F3F3),
      appBar: AppBar(
        leading: IconButton(
            key: Key('back-button2'),
            onPressed: () => Navigator.pop(context),
            icon: Icon(Icons.arrow_back_ios)),
        backgroundColor: Color(0xFFF3F3F3),
        foregroundColor: Color(0xFF4C748B),
        elevation: 0,
      ),
...
                  crossAxisAlignment: CrossAxisAlignment.center,
                  children: [
                    Padding(
                      padding: const EdgeInsets.fromLTRB(101, 12, 101, 0),
                      child: Text(
                        'Recommended',
                        key: Key('recommended-text'),
                        style: TextStyle(
                            fontFamily: 'Kollektif',
                            fontSize: 18,
                            color: Color(0xFF4C748B)),
                      ),
                    ),
...
                      ),
                    ),
                    Padding(
                      padding: const EdgeInsets.only(top: 17.0),
                      child: Text(
                        '${recommendations['Coffee']}g - ${_getCoffeeType(widget.maker)} ground coffee',
                        key: Key('coffee-text'),
                        style: TextStyle(
                            fontFamily: 'Kollekif', color: Color(0xFF4C748B)),
                      ),
                    ),
                    Text(
                      '${recommendations['Water']}g - water',
                      key: Key('water-text'),
                      style: TextStyle(
                          fontFamily: 'Kollekif', color: Color(0xFF4C748B)),
                    ),
                    Padding(
                      padding: const EdgeInsets.only(top: 25.0),
                      child: Text(
...
                    )
                  ],
                ),
              ),
            ),
            ElevatedButton(
                key: Key('done-button'),
                onPressed: () {
                  Navigator.push(
                      context,
                      MaterialPageRoute(
                          builder: (context) => ChooseDeviceScreen()));
                },
...
